# homel

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt
ci/travis/: install-linux.sh  install-osx.sh  install-windows.sh  install_cmake.sh
include/: actions.h  app-error.h  consts.h  db-controller.h  file-list.h  file.h  main.h  menu.h  menus.h  utils.h
scripts/: generate-simple-db.sh
scripts/ci/travis/: install-linux.sh  install-osx.sh  install-windows.sh
src/: CMakeLists.txt  actions.c  app-error.c  db-controller.c  file-list.c  file.c  main.c  menu.c  menus.c  utils.c
test/: CMakeLists.txt  test-utils.c  test-utils.h
test/db-controller/: CMakeLists.txt  test_db-controller.c
test/file/: CMakeLists.txt  test_file.c
test/file-list/: CMakeLists.txt  test_file-list.c
test/menu/: CMakeLists.txt  test_menu.c
